<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/close_window"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top|end"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/close_information_window"
            app:tint="@color/label_tertiary" />
    </FrameLayout>

    <TextView
        android:id="@+id/creation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/creation_date"
        android:textAppearance="@style/TextAppearance.TodoApp.Body"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/modification_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/modification_date"
        android:textAppearance="@style/TextAppearance.TodoApp.Body"
        android:textSize="14sp" />

</LinearLayout>