<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary"
    android:orientation="vertical">

    <include layout="@layout/top_navigation_bar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:padding="16dp">

            <EditText
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/shape_background"
                android:elevation="2dp"
                android:gravity="start|top"
                android:hint="@string/things_to_do"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="16dp"
                android:textAppearance="@style/TextAppearance.TodoApp.Body.TodoItem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/priority_text"
                android:textAppearance="@style/TextAppearance.TodoApp.Body.TodoItem" />

            <TextView
                android:id="@+id/priority_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="start"
                android:text="@string/no"
                android:textAppearance="@style/TextAppearance.TodoApp.Body.TodoItem.Priority" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/separator" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/deadline_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/to_do_till"
                    android:textAppearance="@style/TextAppearance.TodoApp.Body.TodoItem"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/deadline_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.TodoApp.Subhead"
                    android:textColor="@color/blue"
                    app:layout_constraintStart_toStartOf="@id/deadline_title_text"
                    app:layout_constraintTop_toBottomOf="@id/deadline_title_text" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/deadline_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/deadline_title_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/deadline_title_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/separator" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/delete_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/delete"
                    android:src="@drawable/delete_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/label_disable" />

                <TextView
                    android:id="@+id/delete_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/delete"
                    android:textAppearance="@style/TextAppearance.TodoApp.Body.TodoItem"
                    android:textColor="@color/label_disable"
                    app:layout_constraintStart_toEndOf="@id/delete_icon"
                    app:layout_constraintTop_toTopOf="@id/delete_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>